--- a/SocialNetworkGUI/src/main/resources/com/example/socialnetworkgui/views/edit-user-view.fxml
+++ b/SocialNetworkGUI/src/main/resources/com/example/socialnetworkgui/views/edit-user-view.fxml
@@ -5,28 +5,34 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.socialnetworkgui.controller.EditUserController">
    <children>
-      <GridPane alignment="BOTTOM_LEFT" gridLinesVisible="true" AnchorPane.bottomAnchor="130.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="80.0">
+      <GridPane alignment="BOTTOM_LEFT" layoutX="86.0" layoutY="71.0" AnchorPane.bottomAnchor="139.0" AnchorPane.leftAnchor="86.0" AnchorPane.rightAnchor="114.0" AnchorPane.topAnchor="71.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="195.0" minWidth="10.0" prefWidth="129.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="271.0" minWidth="10.0" prefWidth="271.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="First Name" GridPane.rowIndex="0" />
-            <Label text="Last Name" GridPane.rowIndex="1" />
-            <TextField fx:id = "textFieldFirstName" prefHeight="43.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-            <TextField fx:id = "textFieldLastName" prefHeight="44.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label alignment="CENTER" prefHeight="18.0" prefWidth="128.0" text="First Name" GridPane.rowIndex="2" />
+            <Label alignment="CENTER" prefHeight="18.0" prefWidth="129.0" text="Last Name" GridPane.rowIndex="3" />
+            <TextField fx:id="textFieldFirstName" prefHeight="36.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="textFieldLastName" prefHeight="35.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label alignment="CENTER" prefHeight="18.0" prefWidth="129.0" text="Email" />
+            <Label alignment="CENTER" prefHeight="18.0" prefWidth="130.0" text="Password" GridPane.rowIndex="1" />
+            <PasswordField fx:id = "textFieldPassword" prefHeight="37.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id = "textFieldEmail" prefHeight="36.0" prefWidth="200.0" GridPane.columnIndex="1" />
          </children>
       </GridPane>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="100.0">
         <buttons>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                <children>
-                <Button onAction="#handleSave" mnemonicParsing="false" text="Save" />
-                  <Button onAction="#handleCancel" mnemonicParsing="false" text="Cancel" />
+                <Button mnemonicParsing="false" onAction="#handleSave" text="Save" />
+                  <Button mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
                </children>
             </HBox>
         </buttons>
