--- a/SocialNetworkGUI/src/main/resources/com/example/socialnetworkgui/views/user-view.fxml
+++ b/SocialNetworkGUI/src/main/resources/com/example/socialnetworkgui/views/user-view.fxml
@@ -5,14 +5,14 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.socialnetworkgui.controller.UserController">
    <children>
-      <SplitPane dividerPositions="0.7638190954773869" layoutX="-1.0" layoutY="-1.0" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0">
+      <SplitPane dividerPositions="0.7638190954773869" layoutX="-1.0" layoutY="66.0" orientation="VERTICAL" prefHeight="333.0" prefWidth="600.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <TableView fx:id = "tableView" prefHeight="301.0" prefWidth="600.0">
+                  <TableView fx:id="tableView" prefHeight="301.0" prefWidth="600.0">
                     <columns>
-                      <TableColumn fx:id = "tableColumnFirstName" prefWidth="318.0" text="First Name" />
-                      <TableColumn fx:id = "tableColumnLastName" minWidth="0.0" prefWidth="281.0" text="Last Name" />
+                      <TableColumn fx:id="tableColumnFirstName" prefWidth="318.0" text="First Name" />
+                      <TableColumn fx:id="tableColumnLastName" minWidth="0.0" prefWidth="281.0" text="Last Name" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -24,14 +24,15 @@
                <children>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="598.0" spacing="50.0">
                      <children>
-                        <Button onAction="#handleAddUser" mnemonicParsing="false" text="Add" />
-                        <Button onAction="#handleDeleteUser" mnemonicParsing="false" text="Delete" />
-                        <Button onAction="#handleUpdateUser" mnemonicParsing="false" text="Update" />
+                        <Button mnemonicParsing="false" onAction="#handleAddUser" text="Add" />
+                        <Button mnemonicParsing="false" onAction="#handleDeleteUser" text="Delete" />
+                        <Button mnemonicParsing="false" onAction="#handleUpdateUser" text="Update" />
                      </children>
                   </HBox>
                </children>
             </AnchorPane>
         </items>
       </SplitPane>
+      <Label fx:id = "nameLabel" layoutX="158.0" layoutY="13.0" prefHeight="36.0" prefWidth="151.0" text="Label" />
    </children>
 </AnchorPane>
